--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "displayName": "LuX-GRM",
   "description": "Luci's GRM Extension",
   "version": "0.0.1",
+  "publisher": "lucijan",
   "repository": {
     "type": "git",
     "url": "https://github.com/lucijan/lux-grm.git"
