--- a/package.json
+++ b/package.json
@@ -17,10 +17,16 @@
   "activationEvents": [],
   "main": "./extension.js",
   "contributes": {
-    "commands": [{
-      "command": "lux-grm.insertDebugInclude",
-      "title": "Insert debug.h include"
-    }]
+    "commands": [
+      {
+        "command": "lux-grm.insertDebugInclude",
+        "title": "Insert debug.h include"
+      },
+      {
+        "command": "lux-grm.browseJuceDocs",
+        "title": "Browse JUCE documentation"
+      }
+    ]
   },
   "scripts": {
     "lint": "eslint .",
@@ -28,12 +34,15 @@
     "test": "vscode-test"
   },
   "devDependencies": {
-    "@types/vscode": "^1.85.0",
     "@types/mocha": "^10.0.6",
     "@types/node": "18.x",
-    "eslint": "^8.56.0",
-    "typescript": "^5.3.3",
+    "@types/vscode": "^1.85.0",
     "@vscode/test-cli": "^0.0.4",
-    "@vscode/test-electron": "^2.3.8"
+    "@vscode/test-electron": "^2.3.8",
+    "eslint": "^8.56.0",
+    "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "fast-xml-parser": "^4.3.4"
   }
 }
